Add C++20 module support and module consumer coverage

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ results/
 
 # Vendored third-party examples (headers/licenses are tracked)
 third_party/samples/
+
+# GCC C++ modules cache
+gcm.cache/
