--- a/tests/cmake/tu_wrapper_source_props/CMakeLists.txt
+++ b/tests/cmake/tu_wrapper_source_props/CMakeLists.txt
@@ -27,7 +27,7 @@ gentest_attach_codegen(demo SOURCES "${CMAKE_CURRENT_BINARY_DIR}/case.cpp")
 get_target_property(_sources demo SOURCES)
 set(_wrapper "")
 foreach(_src IN LISTS _sources)
-    if(_src MATCHES "\\.gentest\\.cpp$")
+    if(_src MATCHES "\\.gentest\\.[A-Za-z0-9+]+$")
         if(_wrapper STREQUAL "")
             set(_wrapper "${_src}")
         else()
@@ -64,4 +64,3 @@ get_source_file_property(_skip_unity "${_wrapper}" SKIP_UNITY_BUILD_INCLUSION)
 if(NOT _skip_unity STREQUAL "ON")
     message(FATAL_ERROR "Wrapper SKIP_UNITY_BUILD_INCLUSION mismatch. Expected 'ON', got '${_skip_unity}'")
 endif()
-
