Fix shared fixture teardown reentry lifecycle
Block lazy shared fixture setup during teardown to prevent fixture recreation after a slot has already been processed in teardown.

Extend shared_fixture_reentry regression to cover cross-fixture teardown access and keep Windows Debug death-test skip default OFF.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -137,12 +137,7 @@ unset(_gentest_fields)
 unset(_gentest_name)
 unset(_gentest_run)
 
-set(_gentest_skip_windows_debug_death_tests_default OFF)
-if(WIN32)
-    set(_gentest_skip_windows_debug_death_tests_default ON)
-endif()
-option(GENTEST_SKIP_WINDOWS_DEBUG_DEATH_TESTS "Skip Windows Debug death tests that hang on CI" ${_gentest_skip_windows_debug_death_tests_default})
-unset(_gentest_skip_windows_debug_death_tests_default)
+option(GENTEST_SKIP_WINDOWS_DEBUG_DEATH_TESTS "Skip Windows Debug death tests that hang on CI" OFF)
 if(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Debug" AND GENTEST_SKIP_WINDOWS_DEBUG_DEATH_TESTS)
     set_tests_properties(concurrency_fail_single_death concurrency_multi_noadopt_death PROPERTIES DISABLED TRUE)
 endif()
