--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -9,31 +9,44 @@ _gentest_linkopts = select({
 })
 
 # Build gentest_codegen via CMake inside Bazel
+_gentest_codegen_build_srcs = glob(
+    [
+        "CMakeLists.txt",
+        "cmake/**",
+        "tools/**",
+        "include/**",
+        "vcpkg.json",
+        "vcpkg-configuration.json",
+    ],
+    exclude = [
+        "build/**",
+        "bazel-*/**",
+        ".git/**",
+    ],
+    allow_empty = False,
+)
+
 genrule(
-    name = 'gentest_codegen_build',
+    name = 'gentest_codegen_build_unix',
     # Best-effort dependency tracking: this genrule shells out to CMake and is not hermetic.
     # Still, we want Bazel to rebuild `gentest_codegen` when the generator sources/config change.
-    srcs = glob(
-        [
-            "CMakeLists.txt",
-            "cmake/**",
-            "tools/**",
-            "include/**",
-            "vcpkg.json",
-            "vcpkg-configuration.json",
-        ],
-        exclude = [
-            "build/**",
-            "bazel-*/**",
-            ".git/**",
-        ],
-        allow_empty = False,
-    ),
+    srcs = _gentest_codegen_build_srcs,
     outs = ['gen_tools/gentest_codegen'],
     cmd = "set -e; rm -rf $(@D)/b && mkdir -p $(@D)/b && " +
           "cmake -S . -B $(@D)/b -DCMAKE_BUILD_TYPE=Release && " +
           "cmake --build $(@D)/b --target gentest_codegen -j 1 && " +
           "cp $(@D)/b/tools/gentest_codegen $@",
+    tags = ['no-sandbox', 'local'],
+    target_compatible_with = select({
+        '@bazel_tools//src/conditions:windows': ['@platforms//:incompatible'],
+        '//conditions:default': [],
+    }),
+)
+
+genrule(
+    name = 'gentest_codegen_build_windows',
+    srcs = _gentest_codegen_build_srcs,
+    outs = ['gen_tools/gentest_codegen.exe'],
     cmd_bat = "if exist $(@D)\\b rmdir /S /Q $(@D)\\b && mkdir $(@D)\\b && " +
               "cmake -S . -B $(@D)\\b -DCMAKE_BUILD_TYPE=Release && " +
               "cmake --build $(@D)\\b --target gentest_codegen --config Release && " +
@@ -41,6 +54,18 @@ genrule(
               "(copy /Y $(@D)\\b\\tools\\Release\\gentest_codegen.exe $@ >NUL) " +
               "else (copy /Y $(@D)\\b\\tools\\gentest_codegen.exe $@ >NUL))",
     tags = ['no-sandbox', 'local'],
+    target_compatible_with = select({
+        '@bazel_tools//src/conditions:windows': [],
+        '//conditions:default': ['@platforms//:incompatible'],
+    }),
+)
+
+alias(
+    name = 'gentest_codegen_build',
+    actual = select({
+        '@bazel_tools//src/conditions:windows': ':gentest_codegen_build_windows',
+        '//conditions:default': ':gentest_codegen_build_unix',
+    }),
 )
 
 alias(
