Extract runner case invoker and result model

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ endif()
 
 add_library(gentest_runtime ${_gentest_runtime_libtype}
     ${PROJECT_SOURCE_DIR}/src/bench_stats.cpp
+    ${PROJECT_SOURCE_DIR}/src/runner_case_invoker.cpp
     ${PROJECT_SOURCE_DIR}/src/runner_impl.cpp)
 
 add_library(gentest_main STATIC
